# gml-teaching-2026

./: README.md  environment-linux.yml  environment-macos.yml  pyproject.toml  requirements.txt  runme.sh
000-single-cell-RNAseq/: 000_Single_Cell_RNAseq_Analysis_2025.ipynb
003-downstream-analysis/: 3.1_hoodscanR.ipynb  3.2_neighborhood.ipynb  3.4_CCI_stLearn_MMCCI.ipynb
004-deep-learning/: Deep_learning_02.ipynb  Deep_learning_03_transformer_gene_expression.ipynb  Deep_learning_04_vit_HE_spatial.ipynb
pre-course/: README.md
